; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_android_ctx.c_android_gfx_ctx_get_proc_address.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_android_ctx.c_android_gfx_ctx_get_proc_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@android_api = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @android_gfx_ctx_get_proc_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @android_gfx_ctx_get_proc_address(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @android_api, align 4
  switch i32 %3, label %6 [
    i32 129, label %4
    i32 128, label %4
    i32 130, label %5
  ]

4:                                                ; preds = %1, %1
  br label %7

5:                                                ; preds = %1
  br label %6

6:                                                ; preds = %1, %5
  br label %7

7:                                                ; preds = %6, %4
  ret i32* null
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
